gates/fixtures/negative/no-expo-token-leak/planted.env.local
# dotenv variant plant (WO-4.0d rider)
EXPO_TOKEN=dotenvLocalLeak123456
